# entt-breakout

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
assets/font/: kenney_numbers.fnt
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
src/: CMakeLists.txt  animation.cpp  animation.h  bitfont.cpp  bitfont.h  bossAI.cpp  bossAI.h  compedit.cpp  compedit.h  components.cpp  components.h  gameutils.cpp  gameutils.h  main.cpp  sdl_render.cpp  sdl_render.h  templates.cpp  templates.h  tilemap.cpp  tilemap.h  vmath.cpp  vmath.h
